# geeknews-summary

./: .env.example  .gitignore  README.md  alembic.ini  api.php  app.js  article_extractor.php  article_repo.php  chat.php  chat_repo.php  composer.json  db.php  env.php  extract.php  fetch.php  gemini.php  gemini_test.php  index.html  list.php  migrate.php  phpunit.xml  pyproject.toml  search_test.php  styles.css  summarize.php  summary_repo.php
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  db.py  dependencies.py  extractor.py  fetcher.py  gemini.py  main.py  models.py  repositories.py  topic.py
app/routers/: summarize.py
database/: migrate.php
database/migrations/: 001_create_summaries.sql  003_create_chat.sql
migrations/: 002_create_articles.sql
practice/: index.php
public/: app.js
public/api/: chat.php  list.php  summarize.php
src/: article_extractor.php  chat_repo.php  env.php  topic.php
tests/: Pest.php
tests/Feature/: ArticleExtractorTest.php  ChatRepoTest.php  IndexTest.php  SearchArticlesTest.php  SummaryRepoTest.php
tests/Unit/: EnvTest.php  TopicTest.php
tests/e2e/: conftest.py  test_chat.py  test_summarize.py
tests/fixtures/: topic_real.html
tests/unit/: conftest.py  test_config.py  test_db.py  test_extractor.py  test_gemini.py  test_repositories.py  test_summarize_router.py  test_topic.py
