[project]
name = "geeknews-summary"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.21",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 관용구: Depends()/Query() 등을 인자 기본값에서 호출하는 건 정상이다.
# B008(가변 기본값 호출)을 이 DI 호출들에 한해서만 끄고, 나머지엔 계속 작동시킨다.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.basedpyright]
include = ["app", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
